# git-worktree-helper

./: .gitignore  .wkspace.toml  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
docs/plans/: 2026-02-23-wkspace-design.md  2026-02-23-wkspace-implementation.md
src/: config.rs  context.rs  error.rs  git.rs  lib.rs  main.rs  ports.rs  scripts.rs
src/commands/: from.rs  mod.rs  new.rs  rm.rs  teardown.rs
tests/: cmd_from_test.rs  cmd_init_test.rs  cmd_list_test.rs  cmd_new_test.rs  cmd_open_test.rs  cmd_rm_test.rs  config_test.rs  git_test.rs  git_worktree_test.rs  integration_test.rs  scripts_test.rs
