[package]
name = "wkspace"
version = "0.1.0"
edition = "2021"
description = "A CLI tool to manage Git worktrees with lifecycle scripts"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
tempfile = "3"
